初步迁移